Fixed Responsiveness on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -204,7 +204,7 @@ header .nav-bar {
   }
 
   .home-container {
-    transform: translateY(10%);
+    transform: translateY(6%);
   }
 
   .charts {
